# flaskit

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: PHILOSOPHY.md  contributing.md  getting-started.md  templates.md
flaskit/: __main__.py  cli.py  generator.py
